apps/nodecast-tv/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: compress
  namespace: nodecast-tv
spec:
  compress: {}
