apps/nodecast-tv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodecast-tv
  namespace: nodecast-tv
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nodecast-tv
  ports:
    - name: http
      port: 3000
      targetPort: 3000
